--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "styled-react-modal": "^2.1.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
